Animation Overlapp issue fix

--- a/Assets/css/contact.css
+++ b/Assets/css/contact.css
@@ -69,6 +69,7 @@ header {
   margin-bottom: 0;
   position: fixed;
   top: 0;
+  z-index:1000;
 }
 
 .main-div {
