--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -20,6 +20,7 @@ header {
   margin-bottom: 0;
   position: fixed;
   top: 0;
+  z-index:1000;
 }
 
 .main-div {
