--- a/Assets/css/menu.css
+++ b/Assets/css/menu.css
@@ -11,6 +11,7 @@ header {
   margin-bottom: 0;
   position: fixed;
   top: 0;
+  z-index:1000;
 }
 
 .main-div {
